--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="jumbotron">
   <div class="row">
     <div class="col text-center">
-      <h1 class="title">Wellcome to the phone-contact app.</h1>
+      <h1 class="title">Bienvenido a la aplicacion de Contactos Telefónicos.</h1>
     </div>
   </div>
   <div class="row">
     <div class="col text-center">
         <div class="seeButton">
-            <a mat-stroked-button color="primary" routerLink="/contacts">See all contacts</a>
+            <a mat-stroked-button color="primary" routerLink="/contacts">Ver todos los contactos</a>
         </div>
     </div>
   </div>
